# wireguard_vpn_cli

./: .gitignore  README.md  install.sh  pyproject.toml  wg_cli_arch.drawio
templates/: wg0.conf.j2
tests/etc/wireguard/: test_private_key  test_publickey  test_user_privatekey  test_user_publickey  wg0.conf
tests/wg_configs/: test_wg_server.yaml
tests/wg_configs/users/: test_user.yaml
tests/wg_manager/: test_wg_server.py
wg_configs/: wg_server.yaml
wg_manager/: wg_server.py
