[tool.poetry]
name = "wg_cli"
version = "0.0.1"
description = "Poetry enviroment for wireguard vpn cli service"
authors = ["Mike Daniliak <mikhaildanilyak@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PyYAML = "^6.0"
Jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
isort = "^5.11.4"
yapf = "^0.32.0"
tomli = "^2.0.1"
pytest = "^7.2.0"
